Correct some mistakes ready to go online

--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,10 @@
 
 <body>
     <h1>Save Prompts</h1>
-    <input type="text" id="promptInput" placeholder="Enter your prompt">
-    <button id="savePromptButton">Save Prompt</button>
+    <textarea type="text" id="promptInput" placeholder="Enter your prompt"></textarea>
+    <div class="save-prompt-container">
+        <button id="savePromptButton">Save Prompt</button>
+    </div>
     <div id="promptList"></div>
     <script src="popup.js"></script>
 </body>
