select a new palleted and add a copy button for better user experience

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Save Prompts</h1>
-    <textarea type="text" id="promptInput" placeholder="Enter your prompt"></textarea>
+    <textarea type="text" id="promptInput" placeholder="Enter your prompt" rows="1"></textarea>
     <div class="save-prompt-container">
         <button id="savePromptButton">Save Prompt</button>
     </div>
