MVP ready to be launch

--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,11 @@
 
 <body>
     <h1>Save Prompts</h1>
-    <textarea type="text" id="promptInput" placeholder="Enter your prompt" rows="1"></textarea>
-    <div class="save-prompt-container">
-        <button id="savePromptButton">Save Prompt</button>
+    <div id="promptManagementContainer">
+        <textarea type="text" id="promptInput" placeholder="Enter your prompt" rows="1"></textarea>
+        <div id="save-prompt-container" class="save-prompt-container">
+            <button id="savePromptButton">Save Prompt</button>
+        </div>
     </div>
     <div id="promptList"></div>
     <script src="popup.js"></script>
