--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Save Prompts</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 
 <body>
@@ -15,6 +15,10 @@
         </div>
     </div>
     <div id="promptList"></div>
+    <script src="../utils/storage.js"></script>
+    <script src="../utils/helpers.js"></script>
+    <script src="../utils/ui.js"></script>
+    <script src="../utils/listenerFunctions.js"></script>
     <script src="popup.js"></script>
 </body>
 
