add tags for the categories instead of a dropdown.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,6 +14,7 @@
             <button id="savePromptButton">Save Prompt</button>
         </div>
     </div>
+    <div id="tagsContainer" class="tags-container"></div>
     <div id="promptList"></div>
     <script src="../utils/storage.js"></script>
     <script src="../utils/helpers.js"></script>
