fix overflow problem, now the text is not cut. And other styles changes.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,8 +14,8 @@
             <button id="savePromptButton">Save Prompt</button>
         </div>
     </div>
-    <div id="tagsContainer" class="tags-container"></div>
     <div id="promptList"></div>
+    <script src="../utils/variable.js"></script>
     <script src="../utils/storage.js"></script>
     <script src="../utils/helpers.js"></script>
     <script src="../utils/ui.js"></script>
