Elements reorganize to have a better user expirence

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Save Prompts</h1>
+    <h1>Prompt Keeper</h1>
     <div id="promptManagementContainer">
         <textarea type="text" id="promptInput" placeholder="Enter your prompt" rows="1"></textarea>
         <div id="save-prompt-container" class="save-prompt-container">
